# text-menu

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: шаблон-описания-задачи.md
.github/workflows/: ci-cd.yml
docs/: Doxyfile
scripts/: build-dev.sh  build-prod.sh  build.sh  clean.sh  docs.sh  format.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/example/: example.cpp
src/example/include/: example.hpp
src/libtmenu/: CMakeLists.txt  command.cpp
src/libtmenu/include/: command.hpp
tests/: CMakeLists.txt  test_command.cpp  test_main.cpp
